@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.115 2008-05-16 20:48:24 yselkowitz Exp $
+# $Id: cygport.in,v 1.116 2008-05-21 04:40:11 yselkowitz Exp $
 #
 ################################################################################
 
@@ -517,7 +517,7 @@ __src_fetch() {
 	# it's not assured because the tarball names could be the same.
 	# Unfortunately, changing the RCS tarball names would break existing
 	# source packages.  So for now, follow the previous behavior.
-	for rcs in cvs svn git bzr hg
+	for rcs in cvs svn git bzr hg mtn
 	do
 		if defined _USE_${rcs}_FETCH
 		then
